--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -91,7 +91,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="policyandprogram.html">
-                            <span class="title"><u>West Australian policy and program environment</u></span>
+                            <span class="title"><u>West Australian policy, program and services environment</u></span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
