--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -190,7 +190,7 @@
                     <td width="33%" rowspan="7">
                         Improving Aboriginal wellbeing
                     </td>
-                    <td width="33%">
+                    <td width="33%" rowspan="7">
                         Boorloo Bidee Mia
                     </td>
                     <td width="33%">
@@ -198,7 +198,6 @@
                     </td>
                 </tr>
                 <tr>
-                    <td rowspan="6"></td>
                     <td>
                         Wungening Moort
                     </td>
@@ -230,7 +229,7 @@
                 </tr>
 
                 <tr>
-                    <td rowspan="9">
+                    <td rowspan="13">
                         Providing safe, secure and stable homes
                     </td>
                     <td>
@@ -257,7 +256,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td rowspan="11">
                         Common Ground facilities in East Perth and Mandurah.
                     </td>
                     <td>
@@ -265,7 +264,6 @@
                     </td>
                 </tr>
                 <tr>
-                    <td rowspan="10"></td>
                     <td>
                         Horizon House
                     </td>
