--- a/index.html
+++ b/index.html
@@ -141,13 +141,14 @@
     </table>
     <div class="spacer"></div>
     <div class="clr"></div>
-    <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
-        <br>The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.
+    <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2021.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
+    </p><br>
+    <p>The WAAEH acknowledges the assistance of Western Australian homelessness agencies in preparing the Dashboard. The WAAEH wishes to acknowledge the funding to the WAEEH provided by the Sisters of St John of God Ministries without which the WAAEH Dashboard and Ending Homelessness in Western Australia Report 2022 would not have been possible.
     </p>
     <br><br>
     <div id="Background">
         <h2>Background</h2>
-        <p>In July 2018, the WAAEH published the Strategy to End Homelessness (the Strategy). The Strategy articulates a 10-year plan to end homelessness in Western Australia, invoking a whole-of-society response. The Strategy comprises nine broad targets across the following areas: reducing and ending homelessness itself; preventing homelessness through addressing ‘structural’ and ‘individual’ drivers of homelessness; improving policy and practice within the service sector; and, improving measurement, accountability, and governance mechanisms. Those targets relating to reducing and preventing homelessness, which have been operationalised and for which data exists, form the backbone of the present version of the Dashboard. </p>
+        <p>In July 2018, the WAAEH published the <a href="https://www.endhomelessnesswa.com/strategy">Strategy to End Homelessness</a> (the Strategy). The Strategy articulates a 10-year plan to end homelessness in Western Australia, invoking a whole-of-society response. The Strategy comprises nine broad targets across the following areas: reducing and ending homelessness itself; preventing homelessness through addressing ‘structural’ and ‘individual’ drivers of homelessness; improving policy and practice within the service sector; and, improving measurement, accountability, and governance mechanisms. Those targets relating to reducing and preventing homelessness, which have been operationalised and for which data exists, form the backbone of the present version of the Dashboard. </p>
         <center>
             <table class="styled-table">
                 <thead>
