--- a/livedexperience.html
+++ b/livedexperience.html
@@ -161,43 +161,45 @@
         <p> <center><i>“I need more contact with supportive people.”</i></center>
     </p>
     <br>
-    <br>
         <p> <center><i>“A safe place for myself, daughter and grandchild.”</i></center>
     </p>
-    <br>
     <br>
         <p> <center><i>"Just a roof over my head and somewhere to put my baby girl (dog)."</i></center>
     </p>
     <br>
-    <br>
         <p> <center><i>"To be able to be me without judgement, free.”</i></center>
     </p>
-    <br>
     <br>
         <p> <center><i>“A door, a bed and a toilet - not to be watched, a friend a place of my own.”</i></center>
     </p>
     <br>
-    <br>
         <p> <center><i>“A home for my families security and to know the home we have is for a long period.”</i></center>
     </p>
-    <br>
     <br>
         <p> <center><i>“A house, food, stable accommodation, social interaction and having a plan of action to organise your life.”</i></center>
     </p>
     <br>
-    <br>
          <p> <center><i>“A safe, stable home where I can sleep at night and have food in the fridge.”</i></center>
     </p>
-    <br>
     <br>
          <p> <center><i>“Housing, medication, job, good mental health.”</i></center>
     </p>
     <br>
-    <br>
-         <p> <center><i>“Social Contact, people I can relate to, a safe house, regular exercise, gardening.”</i></center>
+         <p> <center><i>“Social contact, people I can relate to, a safe house, regular exercise, gardening.”</i></center>
     </p>
     <br>
+         <p> <center><i>“Employment, good health, and positive lifestyle.”</i></center>
+    </p>
     <br>
+         <p> <center><i>“Long term secure accommodation, improvement of general health, find a job.”</i></center>
+    </p>
+    <br>
+         <p> <center><i>“My own place, the ability to deal with problems, and move towards employment.”</i></center>
+    </p>
+    <br>
+         <p> <center><i>“Stable housing, stable job, and friends.”</i></center>
+    </p>
+    <br>        
     </blockquote>
     
 </div>
