--- a/trendsinhomelessness.html
+++ b/trendsinhomelessness.html
@@ -162,7 +162,7 @@
         <p>The rates of access to SHS reflect the nature of the service system, including the availability and accessibility of services and the types of supports provided. The SHS data indicates that, relative to national rates, Western Australians accessing SHS do so for much shorter support periods and are accommodated for far fewer nights. In 2019-20, the median length of support received was 22 days in Western Australia and 51 days nationally.</p><br>
         <center>
             <table class="normal-table">
-                <caption style="text-align:left"><p3>Table 1.1. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p3></caption>
+                <caption style="text-align:left"><p3><b>Table 1.1</b>. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p3></caption>
                 <thead>
                 <tr>
                     <th></th>
