--- a/advancetozero.html
+++ b/advancetozero.html
@@ -158,7 +158,7 @@
     <br>
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table xx</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3>Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p></p></th>
@@ -232,7 +232,7 @@
     <br>
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table xx</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3>Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p></p></th>
@@ -298,7 +298,7 @@
 
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table xx</b>. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3>Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p>Description of dangerous event</p></th>
