--- a/advancetozero.html
+++ b/advancetozero.html
@@ -150,10 +150,11 @@
     <br>
     <blockquote class="blockquote">
         <h3>Key findings:</h3>
-            <h4><li>62% male, average age 40 years</li>
-            <li>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets</li>
-            <li>1 in 6 aged under 24</li>
-            <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li></h4>
+        <h4> Profile of homeless<h4>
+            <p>   <li>62% male, average age 40 years</li><p>
+            <p>   <li>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets</li></p>
+            <p>   <li>1 in 6 aged under 24</li></p>
+            <p>   <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li></p>
     </blockquote>
     <br>
     <center>
