--- a/advancetozero.html
+++ b/advancetozero.html
@@ -149,9 +149,9 @@
     </p>
     <br>
     <blockquote class="blockquote">
-        <h3>Key findings</h3>
-        <h4> Profile of homeless:</h4>
-            <p>   <ul>62% male, average age 40 years</ul><p>
+        <h2>Key findings</h2>
+        <h3> Profile of homeless:</h3>
+            <h4>   <ul>62% male, average age 40 years</ul></h4>
             <p>   <ul>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets.</ul></p>
             <p>   <ul>1 in 6 aged under 24.</ul></p>
             <p>   <ul>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing).</ul></p>
