--- a/advancetozero.html
+++ b/advancetozero.html
@@ -385,6 +385,76 @@
     <p>The mean cost of use of selected healthcare services in the six months prior to survey among Western Australian respondents in the Advance to Zero database was $14,449, comprised of $10,486 associated with hospitalisations, $2,327 with Accident and Emergency Presentations, and $1,636 with ambulance (Table 21). Rough sleepers reported higher utilisation of healthcare services than those who were not sleeping rough, thus their costs are slightly higher at $15,891 overall ($11,424 hospital; $2,686 A&E; $1,780 ambulance). Table 21 outlines mean frequency and cost of service use of Western Australian respondents in the Advance to Zero database over the six months prior to survey, by rough sleeping status.
         </p><br>
     <br>
+    <center>
+        <table class="normal-table">
+            <caption style="text-align:left"><p3><b>Table X.4</b>. Health service use and estimated costs over six months prior to survey, Advance to Zero, Western Australia</p3></caption>
+                <thead>
+                <tr>
+                    <th><p> Respondent group</p></th>
+                    <th><p>Hospitalisation cost per incident: $5,519</p></th>
+                    <th><p>A&E Cost per incident: $705</p></th>
+                    <th><p>Ambulance cost per incident: $1,029</p></th>
+                    <th><p>Total</p></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><p></p></td>
+                    <td><p>Mean no. incidents</p></td>
+                    <td><p>Mean cost/ person</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</p></td>
+                    <td><p>309</p></td>
+                    <td><p>9.7</p></td>
+                 </tr>
+                <tr>
+                    <td><p>Temporary accommodation (e.g., couch surfing)</p></td>
+                    <td><p>768</p></td>
+                    <td><p>24.1</p></td>
+                </tr>
+                <tr>
+                    <td><p>Short-term accommodationn (e.g., boarding house, hostel, caravan)</p></td>
+                    <td><p>180</p></td>
+                    <td><p>5.7</p></td>
+                </tr>
+                <tr>
+                    <td><p>Institutional accomodation (e.g., hospital, drug and alcohol facility, prison)</p></td>
+                    <td><p>103</p></td>
+                    <td><p>3.2</p></td>
+                </tr>
+                <tr>
+                    <td><p>Permanently housed</p></td>
+                    <td><p>47</p></td>
+                    <td><p>1.5</p></td>
+                </tr>
+                <tr>
+                    <td><p>Other</p></td>
+                    <td><p>34</p></td>
+                    <td><p>1.1</p></td>
+                </tr>
+                <tr>
+                    <td><p>Missing</p></td>
+                    <td><p>100</p></td>
+                    <td><p>3.1</p></td>
+                </tr>
+                <tr>
+                    <td><p>Total</p></td>
+                    <td><p>3183</p></td>
+                    <td><p>100.0</p></td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <p2>
+                            Source: Advance to Zero national data 2012-June 2022
+                        </p2>
+                    </td>
+                </tr>
+                </tfoot>
+            </table>
+        </center>
     <h3>Interactions with Justice</h3>
     <br>
     <p> The majority of respondent reported that they had interacted with police in the previous six months (63.6%) and 55.6% of respondents had been imprisoned at some point in their life.
