--- a/advancetozero.html
+++ b/advancetozero.html
@@ -292,7 +292,7 @@
                             Source: Advance to Zero national data 2012-June 2022
                         </p2>
                         <p2>
-                            Note: (1) Estimates based on unique respondents and exclude missing values.
+                            Notes: (1) Estimates based on unique respondents and exclude missing values.
                         </p2>
                         <p2>
                             (2) Responses that exceeded the respondents' age were removed from analysis.
@@ -391,9 +391,9 @@
                 <thead>
                 <tr>
                     <th><p> Respondent group</p></th>
-                    <th><p>Hospitalisation cost per incident: $5,519</p></th>
-                    <th><p>A&E Cost per incident: $705</p></th>
-                    <th><p>Ambulance cost per incident: $1,029</p></th>
+                    <th colspan="2" align="center">Hospitalisation cost per incident: $5,519</p></th>
+                    <th colspan="2" align="center">A&E Cost per incident: $705</p></th>
+                    <th colspan="2" align="center">Ambulance cost per incident: $1,029</p></th>
                     <th><p>Total</p></th>
                 </tr>
                 </thead>
@@ -402,53 +402,70 @@
                     <td><p></p></td>
                     <td><p>Mean no. incidents</p></td>
                     <td><p>Mean cost/ person</p></td>
+                    <td><p>Mean no. incidents</p></td>
+                    <td><p>Mean cost/person</p></td>
+                    <td><p>Mean no. incidents</p></td>
+                    <td><p>Mean cost/ person</p></td>
+                    <td><p>Mean cost/ person</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</p></td>
-                    <td><p>309</p></td>
-                    <td><p>9.7</p></td>
+                    <td><p>Rough sleepers</p></td>
+                    <td><p>2.07</p></td>
+                    <td><p>$11,424</p></td>
+                    <td><p>3.81</p></td>
+                    <td><p>$2,686</p></td>
+                    <td><p>1.73</p></td>
+                    <td><p>$1,780</p></td>
+                    <td><p>$15,891</p></td>
                  </tr>
                 <tr>
-                    <td><p>Temporary accommodation (e.g., couch surfing)</p></td>
-                    <td><p>768</p></td>
-                    <td><p>24.1</p></td>
+                    <td><p>Not sleeping rough</p></td>
+                    <td><p>1.71</p></td>
+                    <td><p>$9,437</p></td>
+                    <td><p>2.76</p></td>
+                    <td><p>$1,946</p></td>
+                    <td><p>1.43</p></td>
+                    <td><p>$1,471</p></td>
+                    <td><p>$12,855</p></td>
                 </tr>
                 <tr>
-                    <td><p>Short-term accommodationn (e.g., boarding house, hostel, caravan)</p></td>
-                    <td><p>180</p></td>
-                    <td><p>5.7</p></td>
+                    <td><p>Rough sleeping status not specified</p></td>
+                    <td><p>2.09</p></td>
+                    <td><p>$11,535</p></td>
+                    <td><p>3.28</p></td>
+                    <td><p>$2,312</p></td>
+                    <td><p>1.89</p></td>
+                    <td><p>$1,945</p></td>
+                    <td><p>$15,792</p></td>
                 </tr>
                 <tr>
-                    <td><p>Institutional accomodation (e.g., hospital, drug and alcohol facility, prison)</p></td>
-                    <td><p>103</p></td>
-                    <td><p>3.2</p></td>
-                </tr>
-                <tr>
-                    <td><p>Permanently housed</p></td>
-                    <td><p>47</p></td>
-                    <td><p>1.5</p></td>
-                </tr>
-                <tr>
-                    <td><p>Other</p></td>
-                    <td><p>34</p></td>
-                    <td><p>1.1</p></td>
-                </tr>
-                <tr>
-                    <td><p>Missing</p></td>
-                    <td><p>100</p></td>
-                    <td><p>3.1</p></td>
-                </tr>
-                <tr>
-                    <td><p>Total</p></td>
-                    <td><p>3183</p></td>
-                    <td><p>100.0</p></td>
+                    <td><p>Overall</p></td>
+                    <td><p>1.90</p></td>
+                    <td><p>$10,486</p></td>
+                    <td><p>3.3</p></td>
+                    <td><p>$2,327</p></td>
+                    <td><p>1.59</p></td>
+                    <td><p>$1,636</p></td>
+                    <td><p>$14,449</p></td>
                 </tr>
                 </tbody>
                 <tfoot>
                 <tr>
-                    <td colspan="3">
+                    <td colspan="5">
+                        <p2>
+                            A&E, Accident and Emergency; no, number
+                        </p2>
                         <p2>
                             Source: Advance to Zero national data 2012-June 2022
+                        </p2>
+                        <p2>
+                            Notes: (1) Estimates based on unique respondents and excludes missing values.
+                        </p2>
+                        <p2>
+                            (2) Health service use was not included in all survey-types.
+                        </p2>
+                        <p2>
+                            (3) In some cases, there were multiple locations listed as the places slept most frequently and these indicated both rough and non-rough sleeping. These respondents were included in the Other category.
                         </p2>
                     </td>
                 </tr>
