--- a/advancetozero.html
+++ b/advancetozero.html
@@ -151,27 +151,27 @@
     <blockquote class="blockquote">
         <h2>Key findings</h2>
         <h3> Profile of homeless:</h3>
-            <h4>   <ul>62% male, average age 40 years</ul></h4>
-            <p>   <ul>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets.</ul></p>
-            <p>   <ul>1 in 6 aged under 24.</ul></p>
-            <p>   <ul>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing).</ul></p>
-            <p>   <ul>92% have regular income, 41% have enough money to meet all expenses and debt.</ul></p>
-            <p>   <ul>For individuals, the mean time spent homeless was 64.1 months – over 5 years; for families, mean time spent homeless was 68.2 months – over 5.5 years. Looking at 2020-2022 data only, the mean time spent homeless has increased to 76.3 months for individuals.</ul></p>
-        <h4> Experiences while homeless:</h4>
-            <p>   <li>Many people who are homeless have experienced dangerous events while homeless: 56% have been a victim of attack; 50% have threatened to harm themselves or others; 35% have engaged in risky behaviour such as exchange sex for money, run drugs, have unprotected sex with strangers or share a needle; and 33% had a person forcing them to do things they don’t want to do.</li><p>
-            <p>   <li>50.3% of Western Australia rough sleepers reported having been discriminated against with respect to homelessness services or housing.</li></p>
-        <h4> Health problems:</h4>
-            <p>   <li>58.4% report dental problems, 30% dehydration, 19.9% foot/skin infections.</li><p>
+        <h4><p>   <li>62% male, average age 40 years</ul>
+            <p>   <li>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets.</li></p>
+            <p>   <li>1 in 6 aged under 24.</li></p>
+            <p>   <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing).</li></p>
+            <p>   <li>92% have regular income, 41% have enough money to meet all expenses and debt.</li></p>
+            <p>   <li>For individuals, the mean time spent homeless was 64.1 months – over 5 years; for families, mean time spent homeless was 68.2 months – over 5.5 years. Looking at 2020-2022 data only, the mean time spent homeless has increased to 76.3 months for individuals.</li></p></h4>
+        <h3> Experiences while homeless:</h3>
+        <h4><p>   <li>Many people who are homeless have experienced dangerous events while homeless: 56% have been a victim of attack; 50% have threatened to harm themselves or others; 35% have engaged in risky behaviour such as exchange sex for money, run drugs, have unprotected sex with strangers or share a needle; and 33% had a person forcing them to do things they don’t want to do.</li><p>
+            <p>   <li>50.3% of Western Australia rough sleepers reported having been discriminated against with respect to homelessness services or housing.</li></p></h4>
+        <h3> Health problems:</h3>
+        <h4><p>   <li>58.4% report dental problems, 30% dehydration, 19.9% foot/skin infections.</li><p>
             <p>   <li>34.1% report asthma, 27% heat stroke, 18.8% hepatitis C, 19.7% heart disease, 13.5% liver disease, 12.8% diabetes.</li></p>
             <p>   <li>69.5% depression, 63.2% anxiety, 39.3% PTSD, 24.3% psychosis.</li></p>
             <p>   <li>72.0% problematic drug or alcohol use, 39.1% consuming alcohol and/or drugs daily.</li></p>
-            <p>   <li>35% serious brain injury or head trauma.</li></p>
-        <h4> Interactions with health system.</h4>
-            <p>   <li>51.6% had been hospitalised in the previous six months, 66.1% reported they had used Accident and Emergency, 55.6% had been taken to hospital by ambulance.</li><p>
-            <p>   <li>The mean cost of use of selected healthcare services in the six months prior to survey among Western Australian respondents in the Advance to Zero database was $14,449.  Rough sleepers reported higher utilisation of healthcare services than those who were not sleeping rough, thus their costs are slightly higher at $15,891 overall.</li></p>
-        <h4> Interactions with justice system</h4>
-            <p>   <li>63.6% reported that they had interacted with police in the previous six months.</li><p>
-            <p>   <li>55.6% of respondents had been imprisoned at some point in their life.</li></p>
+            <p>   <li>35% serious brain injury or head trauma.</li></p></h4>
+        <h3> Interactions with health system.</h3>
+        <h4><p>   <li>51.6% had been hospitalised in the previous six months, 66.1% reported they had used Accident and Emergency, 55.6% had been taken to hospital by ambulance.</li><p>
+            <p>   <li>The mean cost of use of selected healthcare services in the six months prior to survey among Western Australian respondents in the Advance to Zero database was $14,449.  Rough sleepers reported higher utilisation of healthcare services than those who were not sleeping rough, thus their costs are slightly higher at $15,891 overall.</li></p></h4>
+        <h3> Interactions with justice system</h3>
+        <h4><p>   <li>63.6% reported that they had interacted with police in the previous six months.</li><p>
+            <p>   <li>55.6% of respondents had been imprisoned at some point in their life.</li></p></h4>
     </blockquote>
     <br><br>
     <h3>The experience of homelessness<h3>
