--- a/advancetozero.html
+++ b/advancetozero.html
@@ -183,7 +183,7 @@
     
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table X.1</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table 6.1</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p></p></th>
@@ -255,7 +255,7 @@
     <br>
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table X.2</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table 6.2</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p></p></th>
@@ -321,7 +321,7 @@
 
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table X.3</b>.Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table 6.3</b>.Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p>Description of dangerous event</p></th>
@@ -387,7 +387,7 @@
     <br>
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3><b>Table X.4</b>. Health service use and estimated costs over six months prior to survey, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table 6.4</b>. Health service use and estimated costs over six months prior to survey, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p> Respondent group</p></th>
