--- a/advancetozero.html
+++ b/advancetozero.html
@@ -390,11 +390,11 @@
             <caption style="text-align:left"><p3><b>Table 6.4</b>. Health service use and estimated costs over six months prior to survey, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
-                    <th><p> Respondent group</p></th>
-                    <th colspan="2" align="center">Hospitalisation cost per incident: $5,519</p></th>
-                    <th colspan="2" align="center">A&E Cost per incident: $705</p></th>
-                    <th colspan="2" align="center">Ambulance cost per incident: $1,029</p></th>
-                    <th><p>Total</p></th>
+                    <th>Respondent group</th>
+                    <th colspan="2" align="center">Hospitalisation cost per incident: $5,519</th>
+                    <th colspan="2" align="center">A&E Cost per incident: $705</th>
+                    <th colspan="2" align="center">Ambulance cost per incident: $1,029</th>
+                    <th>Total</th>
                 </tr>
                 </thead>
                 <tbody>
