--- a/advancetozero.html
+++ b/advancetozero.html
@@ -453,10 +453,10 @@
                 <tr>
                     <td colspan="5">
                         <p2>
-                            A&E, Accident and Emergency; no, number
+                            A&E, Accident and Emergency; no, number.
                         </p2>
                         <p2>
-                            Source: Advance to Zero national data 2012-June 2022
+                            Source: Advance to Zero national data 2012-June 2022.
                         </p2>
                         <p2>
                             Notes: (1) Estimates based on unique respondents and excludes missing values.
