--- a/advancetozero.html
+++ b/advancetozero.html
@@ -166,10 +166,10 @@
             <p>   <li>69.5% depression, 63.2% anxiety, 39.3% PTSD, 24.3% psychosis.</li></p>
             <p>   <li>72.0% problematic drug or alcohol use, 39.1% consuming alcohol and/or drugs daily.</li></p>
             <p>   <li>35% serious brain injury or head trauma.</li></p></h4>
-        <h3> Interactions with health system.</h3>
+        <h3> Interactions with health system:</h3>
         <h4><p>   <li>51.6% had been hospitalised in the previous six months, 66.1% reported they had used Accident and Emergency, 55.6% had been taken to hospital by ambulance.</li><p>
             <p>   <li>The mean cost of use of selected healthcare services in the six months prior to survey among Western Australian respondents in the Advance to Zero database was $14,449.  Rough sleepers reported higher utilisation of healthcare services than those who were not sleeping rough, thus their costs are slightly higher at $15,891 overall.</li></p></h4>
-        <h3> Interactions with justice system</h3>
+        <h3> Interactions with justice system:</h3>
         <h4><p>   <li>63.6% reported that they had interacted with police in the previous six months.</li><p>
             <p>   <li>55.6% of respondents had been imprisoned at some point in their life.</li></p></h4>
     </blockquote>
