--- a/authors.html
+++ b/authors.html
@@ -132,7 +132,7 @@
                 <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
                 <br>
                 <h2><i>Dashboard 2022</i></h2>
-                <h4>Version 4.0 (Demo)</h4><br>
+                <h4>Version 4.0</h4><br>
             </td>
             <td style="width:30%; vertical-align:top;">
                 <img class="logo" src="waeeh logo with text.png" width="300" height="150">
