--- a/funding.html
+++ b/funding.html
@@ -143,7 +143,7 @@
     <div class="spacer"></div>
     <div class="clr"></div>
     <p>
-        On the basis of Report of Government Services data, the Western Australian Government expended $90.3 on homelessness services and $645.3 million on social housing in 2020-21.
+        On the basis of Report of Government Services data, the Western Australian Government expended $90.3 million on homelessness services and $645.3 million on social housing in 2020-21.
     </p><br>
     <p>
         The 2021-22 WA Government budget included $875 million social housing investment going forward, including a $750 million Social Housing Investment Fund, with $228 million for short-term projects to increase social housing and $522 million to deliver 3,300 new social homes from 2022-23.  As part of reforms to boost social housing availability in regional WA, 39 long-term vacant and unused Government Regional Officer Homes have been transferred to the public housing stock.  Regions include the Pilbara, South-West, Mid-West/Gascoyne, Kimberley, Wheatbelt, Great Southern and Peel.
