--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title"><u>WAAEH Outcomes Measurement Framework</u></span>
+                            <span class="title"><u>WAAEH Dashboard</u></span>
                         </a>
                     </div>
                     <br>
@@ -130,10 +130,8 @@
     <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
-                <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
+                <h1>Western Australian Alliance to End Homelessness Dashboard</h1>
                 <br>
-                <h2><i>Dashboard 2022</i></h2>
-                <h4>Version 4.0</h4><br>
             </td>
             <td style="width:30%; vertical-align:top;">
                 <img class="logo" src="waeeh logo with text.png" width="300" height="150">
