--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </table>
     <div class="spacer"></div>
     <div class="clr"></div>
-    <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2021.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
+    <p>The Western Australian Alliance to End Homelessness Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
     </p><br>
     <p>The WAAEH acknowledges the assistance of Western Australian homelessness agencies in preparing the Dashboard. The WAAEH wishes to acknowledge the funding to the WAEEH provided by the Sisters of St John of God Ministries without which the WAAEH Dashboard and Ending Homelessness in Western Australia Report 2022 would not have been possible.
     </p>
