--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             </td>
         </tr>
     </table>
+    <!-- comment -->
     <div class="spacer"></div>
     <div class="clr"></div>
     <p>The Western Australian Alliance to End Homelessness Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
